# cmake_template

./: .gitignore  CMakeLists.txt  README.EDITOR.md  README.md  TODO.md  build.sh  compile_commands.json  manage.sh
.devcontainer/: devcontainer.json
.github/workflows/: classroom.yml
buildscripts/: build.sh  create_io_test.sh  criterion.sh  manage.sh  test.sh
src/libraries/Echo/: echo.cpp
src/libraries/test_c_lib/: test_c_lib.c
src/libraries/test_cpp_lib/: test_cpp_lib.cpp
src/libraries/test_cpp_lib/include/: test_cpp_lib.hpp
src/programs/c_endless_loop/: main.c
src/programs/c_program_00/: main.c
src/programs/c_program_01/: deps.txt  main.c
src/programs/cpp_endless_loop/: main.cpp
src/programs/cpp_program_00/: deps.txt  main.cpp
src/programs/foobar/: main.cpp
src/programs/hello_world/: hello.cpp  main.cpp
src/programs/say_hello/: main.cpp
tests/criterion/criterion_cpp/: test00.cpp
tests/criterion/criterion_echo/: deps.txt  test00.c  test00.cpp
tests/criterion/criterion_endless_loop/: test00.cpp
tests/criterion/criterion_program01/: test00.cpp
tests/io_tests/c_endless_loop/: 00.out
tests/io_tests/c_program_00/: 01.out
tests/io_tests/c_program_01/: 00.out
